--- a/index.html
+++ b/index.html
@@ -15,5 +15,30 @@
         <p>
             Hyderabad is known as <b>The City of Pearls</b>, as once it was the only global centre for trade of large diamonds,emeralds and <b>natural pearls</b>
         </p>
+        <hr></hr>
+        <h3>
+          Ordered list
+        </h3>
+        <h5>
+            Activities done at vacation spot
+        </h5>
+        <ol>
+            <li>Visiting Temples</li>
+            <li>Food</li>
+            <li>Historic sites</li>
+        </ol>
+        <h3>
+            Unordered list
+        </h3>
+        <h5>
+            Food that we can get at vacation spot
+        </h5>
+        <ul>
+            <li>Irani Chai</li>
+            <li>Biryani</li>
+            <li>Karachi Biscuits</li>
+        </ul>
+
+
     </body>
 </html>
