added table and code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
             First html
         </title>
     </head>
+    <style>
+        table, th, td {
+          border:1px solid black;
+        }
+    </style>
     <body>
         <h1>
             Avinash Chalam Chinnala
@@ -13,7 +18,7 @@
              HYDERABAD
         </h6>
         <p>
-            Hyderabad is known as <b>The City of Pearls</b>, as once it was the only global centre for trade of large diamonds,emeralds and <b>natural pearls</b>
+           I like Hyderabad because is known as <b>The City of Pearls</b>, as once it was the only global centre for trade of large diamonds,emeralds and <b>natural pearls</b>
         </p>
         <hr></hr>
         <h3>
@@ -38,7 +43,64 @@
             <li>Biryani</li>
             <li>Karachi Biscuits</li>
         </ul>
-
-
+        <a href="mystats.html">Click to open mystats</a>
+        <hr></hr>
+        <h3>
+            Table
+        </h3>
+        <p>
+            Sports are very important for the physical and mental development of a person. They have several positive effects like, increased blood flow, improved concentration and thinking ability. Sports also improves the personality of people.
+        </p>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Reason</th>
+                <th>Average hours in a week</th>
+            </tr>
+            <tr>
+                <td>Soccer</td>
+                <td>strength and endurance</td>
+                <td>15</td>
+            </tr>
+            <tr>
+                <td>Swimming</td>
+                <td>mental Strength</td>
+                <td>15</td>
+            </tr>
+            <tr>
+                <td>Baseball</td>
+                <td>Cardiovascular fitness</td>
+                <td>20</td>
+            </tr>           
+            <tr>
+                <td>Cricket</td>
+                <td>Focus</td>
+                <td>20</td>
+            </tr>
+        </table>
+        <hr>
+        </hr>
+        <h3>
+            Code Display
+        </h3>
+        <blockquote cite="https://stackoverflow.com/questions/77076067/create-radial-button-using-css">How to Shape Morphing Icons in Button on Click
+        </blockquote >
+           <a href="https://stackoverflow.com/questions/55682622/how-to-do-morphing-in-svg">https://stackoverflow.com/questions/55682622/how-to-do-morphing-in-svg</a>
+            <pre>            
+                .button-icons {
+                    width: 1.25em;
+                  }
+                  
+                  /* The individual icons */
+                  .icon {
+                    fill: #fff;
+                  }
+                  
+                  /* We hide the checkmark by default */
+                  #checkmark {
+                    visibility: hidden;
+                  }         
+            </pre>
+            <a href="https://css-tricks.com/snippets/svg/shape-morphing-icons-button-click/">https://css-tricks.com/snippets/svg/shape-morphing-icons-button-click/</a>
     </body>
 </html>
