--- a/mystats.html
+++ b/mystats.html
@@ -10,6 +10,6 @@
         <p>
             Biryani is one of the famous dishes in hyderabad. Fresh herbs, saffron, and basmati rice give it a sweet-floral aroma that hits the nose before you taste it. Biryani is known for its aroma and flavor.The best part about chicken biryani is that each serving provides the best nutrients. Chicken and cashew nuts provide the protein quotient of nutrients.
         </p>
-        <img src=imagebiryani.jpg height=”200” width=“100” alt=“a image of biryani">
+        <a href="imagebiryani.jpg">Click to open image</a>
     </body>
     </html>
